--- a/aula08/estilo02.css
+++ b/aula08/estilo02.css
@@ -15,7 +15,7 @@
             nav{
                 width:30%;
                 height: 100%;
-                background-color: orange;
+                background-color: pink;
                 display:block;
                 padding:0px;
                 float:left;
